# VinylVault

./: .env.example  .gitignore  ANDROID_BUILD.md  DEPLOYMENT.md  DISCOGS_API_INTEGRATION.md  LICENSE  PRIVACY.md  README.md  REQUIRED_KEYS_AND_LOGINS.txt  SECURITY.md  THREATMODEL.md  collection.html  collection.js  deals.html  deals.js  eslint.config.js  futuristic-features.js  index.html  manifest.json  manifest.webmanifest  netlify.toml  package.json  script.js  settings.html  style.css  sw.js  test_enhanced_pricing.py  test_heliodor_pricing.py  vinyl.html
.agents/: web-scraping-agent.agent.md
.calva/: repl.calva-repl
.well-known/: assetlinks.json
android/: build-apk.sh  build.gradle  gradlew  settings.gradle
branding/: README.md  brand-tokens.json
components/: ai-chat.js  bitcoin-service.js  collection-service.js  deal-finder.js  deal-scanner.js  discogs-service.js  ebay-service.js  enhanced-ocr-service.js  multiversx-service.js  ocr-service.js  price-trend-chart.js  pricing-intelligence-service.js  solana-service.js  stat-card.js  (+7 more)
contracts/multiversx/: Cargo.toml
contracts/multiversx/src/: lib.rs
contracts/programs/vinylfort-nft/: Cargo.toml
contracts/programs/vinylfort-nft/src/: error.rs  lib.rs
contracts/programs/vinylfort-nft/src/state/: record_certificate.rs
contracts/programs/vinylvault-nft/: Cargo.toml
contracts/programs/vinylvault-nft/src/: error.rs  lib.rs
contracts/programs/vinylvault-nft/src/instructions/: mint_record.rs  mod.rs  revoke_certificate.rs
contracts/programs/vinylvault-nft/src/state/: mod.rs  record_certificate.rs
(+100 files in other folders)
