[package]
name = "vinylvault-certificate"
version = "0.1.0"
authors = ["VinylVault"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = false

[dependencies.multiversx-sc]
version = "0.53"
features = []

[dev-dependencies.multiversx-sc-scenario]
version = "0.53"
